--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 <body>
 
     <div ng-app="app">
-        <div ng-controller="ContactController">
-            Hello, {{ name }}!
+        <div ng-controller="ContactController as contact">
+            contact <br>
+            name: {{ contact.name }}<br>
+            email: {{contact.email }}<br>
+            phone: {{contact.phone }}<br>
+            <button ng-click="contact.changeName()" type="button">change contact name</button><br>
+
+            staff <br>
+            <div ng-controller="StaffController as staff">
+            name: {{ staff.name }}<br>
+            email: {{staff.email }}<br>staff
+            phone: {{staff.phone }}<br>
+            </div>
+        
         </div>
     </div>
 
